rust_writer_procedural/tests/ui/local_finder_fails_if_lifetime_not_specified.stderr
error: unexpected end of input, expected lifetime
 --> tests/ui/local_finder_fails_if_lifetime_not_specified.rs:5:1
  |
5 | #[local_finder]
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `local_finder` (in Nightly builds, run with -Z macro-backtrace for more info)
